---
source: crates/sui-prover/tests/integration.rs
assertion_line: 155
expression: output
---
exiting with bytecode transformation errors
error: Quantifier function should not abort
   ┌─ tests/inputs/quantifiers/funs_aborts.fail.move:9:1
   │  
 9 │ ╭ fun x_is_10_aborts(x: &u64): bool {
10 │ │     assert!(x == 10); // function can abort
11 │ │     x == 10
12 │ │ }
   │ ╰─^
